Fix text overlap

--- a/apps/common/main/resources/less/buttons.less
+++ b/apps/common/main/resources/less/buttons.less
@@ -993,7 +993,8 @@
 
 .dlg-btn {
     font-weight: bold;
-    width: 86px;
+    width: auto;
+    min-width: 86px;
     color: @text-normal-ie;
     color: @text-normal;
     background-color: @background-normal-ie;
